--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="book-library">
+		<div class="book">
+			<img src="">
+			<h1></h1>
+			<h2></h2>
+			<div><button>Rs. 299</button><div>
+		</div>
+		<div class="book">
+			<img src="">
+			<h1></h1>
+			<h2></h2>
+			<div><button>Rs. 299</button><div>
+		</div>
+		<div class="book">
+			<img src="">
+			<h1></h1>
+			<h2></h2>
+			<div><button>Rs. 299</button><div>
+		</div>
+		
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
