--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;"><b>Book Library</b></h1>
 	<div class="book-library">
 		<div class="book">
 			<div class="i1">
@@ -16,7 +17,8 @@
 			
 			<h2><b>Spy in the Amber</b></h2>
 			<p>By Manohar Malgonkar</p>
-			<button>Rs. 299</button>
+			<div class="butt"><p style="color:white;
+								  text-align:center;">Rs 299</p></div>
 		</div>
 		<div class="book">
 			<div class="i1">
@@ -25,7 +27,8 @@
 			<h2><b>Scared Games</b></h2>
 			<p>By Vikaram Chandra</p>
 		
-				<button>Rs. 299</button>
+				<div class="butt"><p style="color:white;
+								  text-align:center;">Rs 299</p></div>
 			
 		</div>
 		<div class="book">
@@ -35,7 +38,8 @@
 			<h2><b>Byomkesh Bakshi</b></h2>
 			<p>By Sharadindu Bandyopadhyay</p>
 			
-				<button>Rs. 299</button>
+				<div class="butt"><p style="color:white;
+								  text-align:center;">Rs 299</p></div>
 
 		</div>
 		
